--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Sobregi</h2>
+          <h2>Sobre mim</h2>
           <p>Me chamo Taynan Nascimento, sou formada em Nutrição e pós graduada em Nutrição comportamental. Atualmente resolvi me aventurar na área de programação, estou migrando de área pois me interesso e divirto bastante pelo desenvolvimento Fron-end.</p>
         </div>
 
